gitops/projects/immich/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: home
      namespace: gateway
  hostnames:
    - immich.home.${DOMAIN}
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
